Add new content

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: Rraven
 Type: Package
-Title: an R interface for Raven
+Title: connecting R and Raven for bioacoustic analysis
 Version: 1.0.0
 Date: 2017-04-28
 Author: Marcelo Araya-Salas
 Maintainer: Marcelo Araya-Salas <araya-salas@cornell.edu>
-Description: Integrating R with Raven Bioacoustics Software
+Description: A tool to exchange data between R and Raven bioacoustic software. Functions work on data formats compatible with the R package warbleR.
 License: GPL (>= 2)
-Imports: warbleR, pbapply
+Imports: pbapply, warbleR, utils
 Depends: R (>= 3.2.1)
 LazyData: TRUE
 URL: https://github.com/maRce10/Rraven 
