--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(extract_ts)
 export(imp_corr_mat)
 export(imp_raven)
 export(imp_syrinx)
+export(raven_batch_detec)
 export(relabel_colms)
 export(run_raven)
