--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,9 @@ export(imp_syrinx)
 export(raven_batch_detec)
 export(relabel_colms)
 export(run_raven)
+import(warbleR)
+importFrom(pbapply,pblapply)
+importFrom(stats,approx)
+importFrom(stats,as.ts)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
