--- a/Rraven.Rcheck/Rraven/DESCRIPTION
+++ b/Rraven.Rcheck/Rraven/DESCRIPTION
@@ -2,7 +2,7 @@ Package: Rraven
 Type: Package
 Title: Connecting R and Raven Sound Analysis Software
 Version: 1.0.0
-Date: 2017-11-18
+Date: 2017-11-17
 Author: Marcelo Araya-Salas
 Maintainer: Marcelo Araya-Salas <araya-salas@cornell.edu>
 Description: A tool to exchange data between R and 'Raven' sound analysis software (Cornell Lab of Ornithology). Functions work on data formats compatible with the R package 'warbleR'.
@@ -10,7 +10,7 @@ License: GPL (>= 2)
 Imports: pbapply, warbleR, utils, stats, vegan
 Depends: R (>= 3.2.1)
 LazyData: TRUE
-URL: https://github.com/maRce10/Rraven 
+URL: https://github.com/maRce10/Rraven
 BugReports: https://github.com/maRce10/Rraven/issues
 NeedsCompilation: no
 Suggests: knitr
@@ -19,3 +19,4 @@ RoxygenNote: 5.0.1
 Packaged: 2017-11-17 23:45:31 UTC; m
 Repository: CRAN
 Date/Publication: 2017-11-17 08:12:11
+Built: R 3.3.3; ; 2017-11-19 04:02:58 UTC; unix
