--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Type: Package
 Package: Rraven
 Title: Connecting R and 'Raven' Sound Analysis Software
-Version: 1.0.1
+Version: 1.0.2
 Date: 2018-02-11
 Author: Marcelo Araya-Salas
 Maintainer: Marcelo Araya-Salas <araya-salas@cornell.edu>
 Description: A tool to exchange data between R and 'Raven' sound analysis software <http://www.birds.cornell.edu/brp/raven/RavenOverview.html> (Cornell Lab of Ornithology). Functions work on data formats compatible with the R package 'warbleR'.
 License: GPL (>= 2)
-Imports: pbapply, warbleR, utils, stats, vegan, dplyr,kableExtra
+Imports: pbapply, warbleR, utils, stats, vegan, dplyr,kableExtra, doParallel, foreach, pbmcapply
 Depends: R (>= 3.2.1)
 LazyData: TRUE
 URL: https://github.com/maRce10/Rraven 
