--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,11 @@ export(raven_batch_detec)
 export(relabel_colms)
 export(run_raven)
 import(dplyr)
+import(foreach)
 import(kableExtra)
+import(pbapply)
 import(warbleR)
+importFrom(doParallel,registerDoParallel)
 importFrom(pbapply,pblapply)
 importFrom(stats,approx)
 importFrom(stats,as.ts)
