--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(extract_ts)
 export(imp_corr_mat)
 export(imp_raven)
 export(imp_syrinx)
+export(match_wav_case)
 export(raven_batch_detec)
 export(relabel_colms)
 export(run_raven)
+export(sort_colms)
 import(dplyr)
 import(foreach)
 import(kableExtra)
