to_sound_selection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(raven_batch_detec)
 export(relabel_colms)
 export(run_raven)
 export(sort_colms)
+export(to_sound_selection)
 import(dplyr)
 import(kableExtra)
 import(pbapply)
