--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Type: Package
 Package: Rraven
 Title: Connecting R and 'Raven' Sound Analysis Software
 Version: 1.0.6
-Date: 2019-03-11
+Date: 2019-05-22
 Author: Marcelo Araya-Salas [aut, cre]
-Maintainer: Marcelo Araya-Salas <araya-salas@cornell.edu>
+Maintainer: Marcelo Araya-Salas <marceloa27@gmail.com>
 Description: A tool to exchange data between R and 'Raven' sound analysis software <http://www.birds.cornell.edu/brp/raven/RavenOverview.html> (Cornell Lab of Ornithology). Functions work on data formats compatible with the R package 'warbleR'.
 License: GPL (>= 2)
 Imports: pbapply, warbleR, utils, stats, seewave, tuneR, NatureSounds
