--- a/Rraven.Rcheck/Rraven/DESCRIPTION
+++ b/Rraven.Rcheck/Rraven/DESCRIPTION
@@ -10,7 +10,7 @@ License: GPL (>= 2)
 Imports: pbapply, warbleR, utils, stats, seewave, tuneR, NatureSounds
 Depends: R (>= 3.2.1)
 LazyData: TRUE
-URL: https://github.com/maRce10/Rraven 
+URL: https://github.com/maRce10/Rraven
 BugReports: https://github.com/maRce10/Rraven/issues
 NeedsCompilation: no
 Suggests: knitr, vegan, dplyr, kableExtra
@@ -20,3 +20,4 @@ Packaged: 2018-09-27 23:45:31 UTC; m
 Repository: CRAN
 Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marceloa27@gmail.com")
 Date/Publication: 2017-11-17 08:12:11
+Built: R 3.6.0; ; 2019-05-23 14:47:06 UTC; unix
