--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Type: Package
 Package: Rraven
 Title: Connecting R and 'Raven' Sound Analysis Software
-Version: 1.0.7
-Date: 2019-09-03
+Version: 1.0.8
+Date: 2019-10-31
 Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marceloa27@gmail.com", comment = c(ORCID = "0000-0003-3594-619X"))
 Maintainer: Marcelo Araya-Salas <marceloa27@gmail.com>
 Description: A tool to exchange data between R and 'Raven' sound analysis software (Cornell Lab of Ornithology). Functions work on data formats compatible with the R package 'warbleR'.
@@ -13,9 +13,10 @@ LazyData: TRUE
 URL: https://github.com/maRce10/Rraven 
 BugReports: https://github.com/maRce10/Rraven/issues
 NeedsCompilation: no
-Suggests: knitr, vegan, dplyr, kableExtra
+Suggests: knitr, vegan, dplyr, kableExtra, soundgen
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 Packaged: 2018-09-27 23:45:31 UTC; m
 Repository: CRAN
+Language: en-US
 Date/Publication: 2017-11-17 08:12:11
