fix raven_batch_detec directory issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(raven_batch_detec)
 export(relabel_colms)
 export(run_raven)
 export(to_sound_selection)
+import(NatureSounds)
 import(pbapply)
 import(warbleR)
 importFrom(seewave,duration)
