--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Type: Package
 Package: Rraven
 Title: Connecting R and 'Raven' Sound Analysis Software
-Version: 1.0.9
-Date: 2020-02-12
-Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marceloa27@gmail.com", comment = c(ORCID = "0000-0003-3594-619X"))
-Maintainer: Marcelo Araya-Salas <marceloa27@gmail.com>
+Version: 1.0.10
+Date: 2020-06-08
+Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marcelo.araya@ucr.ac.cr", comment = c(ORCID = "0000-0003-3594-619X"))
+Maintainer: Marcelo Araya-Salas <marcelo.araya@ucr.ac.cr>
 Description: A tool to exchange data between R and 'Raven' sound analysis software (Cornell Lab of Ornithology). Functions work on data formats compatible with the R package 'warbleR'.
 License: GPL (>= 2)
 Imports: pbapply, warbleR, utils, stats, seewave, tuneR, NatureSounds
@@ -15,7 +15,7 @@ BugReports: https://github.com/maRce10/Rraven/issues
 NeedsCompilation: no
 Suggests: knitr, vegan, dplyr, kableExtra
 VignetteBuilder: knitr
-RoxygenNote: 7.0.1
+RoxygenNote: 7.1.0
 Packaged: 2018-09-27 23:45:31 UTC; m
 Repository: CRAN
 Language: en-US
