--- a/pkgdown/pkgdown.yml
+++ b/pkgdown/pkgdown.yml
@@ -1,8 +1,11 @@
 pandoc: 1.19.2.1
 pkgdown: 1.4.1
 pkgdown_sha: ~
-articles: {}
-
+articles: 
+- title: vignettes
+  navbar: vignettes
+  contents:
+  - starts_with("Rraven")
 template:
   params:
     bootswatch: cerulean
