--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,13 +1,10 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^gifs$
-^.gitignore$
-^.Rd2pd
-^.Rproj.user$
-^.git$
-^Rproj.user$
-^git$
-^giignore$
-^docs$
-^pkgdown$
-^testing$
+^.*\.Rproj$
+^\.Rproj\.user$
+^.*\.pdf$
+testing
+docs
+pkgdown
+README\.Rmd$
