--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: 2.17.1.1
-pkgdown: 2.0.5
+pandoc: '2.18'
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   Rraven: Rraven.html
-last_built: 2022-07-02T22:26Z
+last_built: 2022-07-15T17:28Z
 urls:
   reference: https://marce10.github.io/Rraven/reference
   article: https://marce10.github.io/Rraven/articles
