--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,8 +3,8 @@ pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   Rraven: Rraven.html
-last_built: 2022-12-22T14:01Z
+last_built: 2022-12-22T14:08Z
 urls:
-  reference: https://marce10.github.io/NatureSounds/reference
-  article: https://marce10.github.io/NatureSounds/articles
+  reference: https://marce10.github.io/Rraven/reference
+  article: https://marce10.github.io/Rraven/articles
 
