--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,20 +2,19 @@ Type: Package
 Package: Rraven
 Title: Connecting R and 'Raven' Sound Analysis Software
 Version: 1.0.14
-Date: 2022-07-15
 Authors@R: person("Marcelo", "Araya-Salas", role = c("aut", "cre"), email = "marcelo.araya@ucr.ac.cr", comment = c(ORCID = "0000-0003-3594-619X"))
 Maintainer: Marcelo Araya-Salas <marcelo.araya@ucr.ac.cr>
 Description: A tool to exchange data between R and 'Raven' sound analysis software (Cornell Lab of Ornithology). Functions work on data formats compatible with the R package 'warbleR'.
 License: GPL (>= 2)
-Imports: pbapply, warbleR, utils, stats, seewave, tuneR, NatureSounds
+Imports: pbapply, warbleR (>= 1.1.32), utils, stats, seewave, tuneR, methods
 Depends: R (>= 3.2.1)
 LazyData: TRUE
 URL: https://github.com/maRce10/Rraven 
 BugReports: https://github.com/maRce10/Rraven/issues
 NeedsCompilation: no
-Suggests: knitr, vegan, dplyr, kableExtra, rmarkdown
+Suggests: knitr, vegan, dplyr, kableExtra, rmarkdown, NatureSounds
 VignetteBuilder: knitr
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Packaged: 2018-09-27 23:45:31 UTC; m
 Repository: CRAN
 Language: en-US
